--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "cypress:open": "cypress open",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Derek Ross",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
+    "cypress": "^4.9.0",
     "nodemon": "^2.0.2"
   }
 }
