--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "cypress:open": "cypress open",
+    "browserstack-cypress": "browserstack-cypress run",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "wdio-local": "./node_modules/.bin/wdio wdio.conf.js"
   },
